--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
    
-    <div class="jumbotron container-fluid mt-2 text-center p-2" style="background-color:#404040 ;color: white;">
+    <div class="jumbotron container-fluid mt-2 text-center p-2" style="background-color:#020bfa ;color: white;">
         <h1> <strong>Weather Dashboard</strong></h1>
     </div>
     <div class="container">
@@ -40,31 +41,31 @@
                 <div class="col-sm-12" id ="future-weather">
                     <h3>5-Day Forecast:</h3>
                     <div class="row text-light">
-                        <div class="col-sm-2 bg-primary forecast text-white ml-2 mb-3 p-2 mt-2 rounded" >
+                        <div class="col-sm-2 bg-warning forecast text-white ml-2 mb-3 p-2 mt-2 rounded" >
                             <p id="fDate0"></p>
                             <p id="fImg0"></p>
                             <p>Temp:<span id="fTemp0"></span></p>
                             <p>Humidity:<span id="fHumidity0"></span></p>
                         </div>
-                        <div class="col-sm-2 bg-primary forecast text-white ml-2 mb-3 p-2 mt-2 rounded" >
+                        <div class="col-sm-2 bg-warning forecast text-white ml-2 mb-3 p-2 mt-2 rounded" >
                             <p id="fDate1"></p>
                             <p id="fImg1"></p>
                             <p>Temp:<span id="fTemp1"></span></p>
                             <p>Humidity:<span id="fHumidity1"></span></p>
                         </div>
-                        <div class="col-sm-2 bg-primary forecast text-white ml-2 mb-3 p-2 mt-2 rounded">
+                        <div class="col-sm-2 bg-warning forecast text-white ml-2 mb-3 p-2 mt-2 rounded">
                             <p id="fDate2"></p>
                             <p id="fImg2"></p>
                             <p>Temp:<span id="fTemp2"></span></p>
                             <p>Humidity:<span id="fHumidity2"></span></p>
                         </div>
-                        <div class="col-sm-2 bg-primary forecast text-white ml-2 mb-3 p-2 mt-2 rounded">
+                        <div class="col-sm-2 bg-warning forecast text-white ml-2 mb-3 p-2 mt-2 rounded">
                             <p id="fDate3"></p>
                             <p id="fImg3"></p>
                             <p>Temp:<span id="fTemp3"></span></p>
                             <p>Humidity:<span id="fHumidity3"></span></p>
                         </div>
-                        <div class="col-sm-2 bg-primary forecast text-white ml-2 mb-3 p-2 mt-2 rounded" >
+                        <div class="col-sm-2 bg-warning forecast text-white ml-2 mb-3 p-2 mt-2 rounded" >
                             <p id="fDate4"></p>
                             <p id="fImg4"></p>
                             <p>Temp:<span id="fTemp4"></span></p>
@@ -76,6 +77,7 @@
         </div>
     </div>
 
+    <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
